# BlackPanther_V1

./: .gitignore  README.md  __init__.py  pyproject.toml  requirements.txt  set.sh
data/: memory.db
docker/: Dockerfile.kali  Dockerfile.parrot  docker-compose.yml
examples/: mathematical_demo.py  mathematical_proofs.py
output/exploits/: web_api_Negative_Quantity_in_Basket__Price_Manip_ce5138d1.py  web_auth_Admin_Panel_Access_ccfd668d.py  web_auth_Default_Credentials___J12934_juice_sh_op_ce5138d1.py  web_auth_Default_Credentials___admin_juice_sh_op__ccfd668d.py  web_auth_Default_Credentials___admin_juice_sh_op__ce5138d1.py  web_auth_Default_Credentials___amy_juice_sh_op__u_ccfd668d.py  web_auth_Default_Credentials___amy_juice_sh_op__u_ce5138d1.py  web_auth_Default_Credentials___bender_juice_sh_op_ce5138d1.py  web_auth_Default_Credentials___jim_juice_sh_op__u_ccfd668d.py  web_auth_Default_Credentials___jim_juice_sh_op__u_ce5138d1.py  web_auth_Default_Credentials___mc_safesearch_juic_ccfd668d.py  web_auth_Default_Credentials___mc_safesearch_juic_ce5138d1.py  web_auth_Default_Credentials___morty_juice_sh_op__ce5138d1.py  web_auth_Default_Credentials___wurstbrot_juice_sh_ce5138d1.py  web_auth_Mass_Assignment___Admin_Role_via_Registr_ccfd668d.py  web_auth_Password_Change_via_GET__no_CSRF_token__ce5138d1.py  web_disclosure_FTP_Directory_Listing__0__files__ce5138d1.py  web_disclosure_FTP_Directory_Listing__27__files__ccfd668d.py  web_idor_IDOR___Access_Basket__1__3_items__ccfd668d.py  web_idor_IDOR___Access_Basket__2__1_items__ccfd668d.py  web_idor_IDOR___Access_Basket__3__1_items__ccfd668d.py  web_idor_IDOR___Access_Basket__4__1_items__ccfd668d.py  web_idor_IDOR___Access_Basket__5__2_items__ccfd668d.py  web_idor_IDOR___User_Profile__1__admin_juice_sh_o_ccfd668d.py  web_idor_IDOR___User_Profile__2__jim_juice_sh_op__ccfd668d.py  web_idor_IDOR___User_Profile__3__bender_juice_sh__ccfd668d.py  web_idor_IDOR___User_Profile__4__bjoern_kimminich_ccfd668d.py  web_idor_IDOR___User_Profile__5__ciso_juice_sh_op_ccfd668d.py  web_jwt_JWT_Key_Exposure____well_known_jwks_json_ccfd668d.py  web_jwt_JWT_Key_Exposure___encryptionkeys_jwt_pu_ccfd668d.py  web_jwt_JWT_None_Algorithm_Attack__alg_None__ccfd668d.py  web_sqli_SQL_Injection___Error_Based__Search__ccfd668d.py  web_sqli_SQL_Injection___Login_Bypass__admin_juic_ccfd668d.py  web_sqli_SQL_Injection___Search_UNION__union_extr_ccfd668d.py  web_sqli_SQL_Injection___Search_UNION__union_user_ccfd668d.py  web_ssrf_SSRF_via_Profile_Image_URL_ccfd668d.py  web_ssrf_SSRF_via_Profile_Image_URL_ce5138d1.py  web_traversal_Directory_Traversal___KeePass_DB_access_ce5138d1.py  web_traversal_Directory_Traversal___Null_byte_bypass_f_ccfd668d.py  web_traversal_Directory_Traversal___Null_byte_bypass_f_ce5138d1.py  (+13 more)
output/web_reports/: web_report_http___localhost_3000_1773296829.json  web_report_http___sawongambnkltd_atspace_cc_pages_home_php_1773292873.json  web_report_http___www_urjaindustries_co_in_1773245189.json  web_report_http___www_urjaindustries_co_in_1773287793.json  web_report_https___juice_shop_herokuapp_com_1773290858.json  web_report_https___portswigger_net_web_security_1773297123.json
src/blackpanther/: __init__.py  settings.py
src/blackpanther/agents/: __init__.py  base.py  console.py  coordinator.py  exploit.py  interfaces.py  memory.py  recon.py  report_generator.py  resilience.py  scanner.py  visualizer.py  web_attack.py  web_recon.py
src/blackpanther/api/: __init__.py  asgi.py  consumers.py  django_settings.py  interactive_viz.py  manage.py  routing.py  serializers.py  tasks.py  urls.py  views.py  wsgi.py
src/blackpanther/core/: __init__.py  access.py  base.py  control.py  knowledge.py  scanner.py  suspicion.py
src/data/: memory.db
tests/unit/: test_agents.py  test_knowledge.py  test_mathematical.py  test_scanner.py  test_suspicion.py
