[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "blackpanther-v2"
version = "0.1.0"
description = "Autonomous AI Penetration Testing Agent"
readme = "README.md"
authors = [
    {name = "KATHAN CHIRAGKUMAR PAREKH", email = "kparekh@reignagent.com"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Information Technology and Security",
    "Topic :: Agentic Cybersecurity",
    "Programming Language :: Python :: 3.9",
]
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "pandas>=2.0.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "networkx>=3.0",
    "pydantic>=2.5.0",
    "loguru>=0.7.0",
    "sqlalchemy>=2.0.0",
    "python-nmap>=0.7.0",
    "requests>=2.31.0",
    "openai>=1.10.0",
    "aiohttp>=3.9.0",
    "aiofiles>=23.2.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "flake8>=6.0",
    "mypy>=1.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
blackpanther = "blackpanther.cli.main:main"