[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "blackpanther-v2"
version = "0.2.0"
description = "Autonomous AI Penetration Testing Agent with Django API"
readme = "README.md"
authors = [
    {name = "KATHAN CHIRAGKUMAR PAREKH", email = "kparekh@reignagent.com"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Information Technology and Security",
    "Topic :: Agentic Cybersecurity",
    "Programming Language :: Python :: 3.9",
    "Framework :: Django :: 5.0",
]
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "pandas>=2.0.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "plotly>=5.18.0",
    "networkx>=3.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "loguru>=0.7.0",
    "sqlalchemy>=2.0.0",
    "python-nmap>=0.7.0",
    "requests>=2.31.0",
    "openai>=1.10.0",
    "aiohttp>=3.9.0",
    "aiofiles>=23.2.0",
    "rich>=13.0.0",
    "django>=5.0",
    "djangorestframework>=3.14.0",
    "django-cors-headers>=4.3.0",
    "channels>=4.0.0",
    "channels-redis>=4.2.0",
    "daphne>=4.1.0",
    "celery>=5.3.0",
    "redis>=5.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-django>=4.7.0",
    "black>=23.0",
    "flake8>=6.0",
    "mypy>=1.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
blackpanther = "blackpanther.cli.main:main"
blackpanther-api = "blackpanther.api.manage:main"